Working choices and add button

--- a/CRUD.html
+++ b/CRUD.html
@@ -44,15 +44,15 @@
 						
                         <li class="choice-wrapper">
 							<label for="1">Choice #1</label>
-							<input type="text" id="1" name="choice">
+							<input type="text" id="choice1" name="choice">
 						</li>
 						<li class="choice-wrapper">
 							<label for="2">Choice #2</label>
-							<input type="text" id="2" name="choice">
+							<input type="text" id="choice2" name="choice">
 						</li>
 						<li class="choice-wrapper">
 							<label for="3">Choice #3</label>
-							<input type="text" id="3" name="choice" class="test">
+							<input type="text" id="choice3" name="choice" class="test">
 							<input type='image' src='cross108.png' class='icon-del' alt='Submit'>
 						</li>
 						
